# intake-formats

./: .gitignore  .pre-commit-config.yaml  .prettierignore  CONTRIBUTING.md  README.md
.github/: GUIDE.md  PULL_REQUEST_TEMPLATE.md  README.md  SECURITY_ANONYMIZATION_GUIDE.md  copilot-instructions.md  dependabot.yml
1Password/: README.md
AWS/: README.md
Acklio/: README.md
Akamai/: README.md
Anozrway/: README.md
Apache/: README.md
Aruba Network/: README.md
Azure/: README.md
BIND/: README.md
Barracuda/: README.md
Beats/: README.md
BeyondTrust/: README.md
Bitdefender/: README.md
Bitsight/: README.md
Broadcom/: README.md
CEF/: README.md
CatoNetworks/: README.md
Checkpoint/: README.md
Cisco/: README.md
CiscoESA/: README.md
Citrix/: README.md
Claroty/: README.md
Clavister/: README.md
Cloudflare/: README.md
CrowdStrike/: README.md
CybeReason/: README.md
CyberArk/: README.md
Cyberwatch/: README.md
Darktrace/: README.md
Daspren/: README.md
Datadome/: README.md
Deepvisibility/: README.md
Delinea/: README.md
Digital Shadows/: README.md
Duo/: README.md
EfficientIP/: README.md
Ekinops/: README.md
Eset/: README.md
ExtraHop/: README.md
F-Secure/: README.md
F5 Networks/: README.md
Fastly/: README.md
Forcepoint/: README.md
Fortinet/: README.md
FreeRADIUS/: README.md
GateWatcher/: README.md
Github/: README.md
Google Cloud/: README.md
HAProxy/: README.md
HarfangLab/: README.md
Hornetsecurity/: README.md
IBM/: README.md
ISC DHCP/: README.md
Ivanti/: README.md
utils/: README.md  checks.py  conftest.py  create_test.py  events.md  generate.py  helpers.py  linter.py  manifest.md  normalize_image.py  parser.md  publish_format.py  pyproject.toml  send_events.py  show_smart_descriptions.py  test_formats.py  test_linting.py  test_single_smart_desc.py
utils/checks/: __main__.py  constants.py  format.py  generate_builtin_fields_txt.py  helpers.py  module.py
utils/checks/tests/validators/: test_anonymization.py
utils/checks/validators/: __init__.py  anonymization.py  base.py  changelog.py  constants.py  data_sources.py  format.py  logo.py  manifest.py  meta.py  module.py  parser.py  taxonomy.py  test_files.py
utils/checks/validators/data/: built_in_fields.txt  data_sources.txt  sekoiaio_flat.yml
utils/new_intake/: cookiecutter.json
utils/new_intake/{{cookiecutter.intake_slug}}/_meta/: manifest.yml
utils/new_intake/{{cookiecutter.intake_slug}}/ingest/: parser.yml
utils/new_intake/{{intake_slug}}/_meta/: manifest.yaml
utils/new_intake/{{intake_slug}}/ingest/: parser.yml
utils/new_module/: cookiecutter.json
utils/new_module/{{cookiecutter.module_dir}}/: README.md
utils/new_module/{{cookiecutter.module_dir}}/_meta/: manifest.yml
utils/new_module/{{module_dir}}/: README.md
utils/quality/: format_stats.py  rules_per_dialect.py
(+6111 files in other folders)
