[tool.poetry]
name = "intake-formats"
version = "0.1.0"
description = "Sekoia.io Intake Formats"
authors = []

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.4"
requests = "^2.31.0"
PyYAML = "^6.0"
pytest-clarity = "^1.0.1"
cookiecutter = "^2.4.0"
typer = "^0.12.1"
orjson = "^3.9.13"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
