[tool.poetry]
name = "intake-formats"
version = "0.1.0"
description = "Sekoia.io Intake Formats"
authors = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.4.2"
requests = "^2.32.5"
PyYAML = "^6.0.2"
pytest-clarity = "^1.0.1"
cookiecutter = "^2.6.0"
typer = "^0.9.4"
orjson = "^3.11.3"
pydantic = "^2.11.7"
pillow = "^11.3.0"
rich = "^14.1.0"
structlog = "^25.4.0"
poethepoet = "^0.26.1"
numpy = "^1.24.2"

[tool.poetry.dev-dependencies]
autoflake = "^1.4"
isort = "^5.10.1"
black = { version = "^24.3.0", extras = ["colorama"] }

[tool.black]
line-length = 119
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 119

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks.lint]
sequence = [
    { cmd = "find . -type f -name '*.py' ! -name '__init__.py' ! -name '__main__.py' -exec poetry run autoflake --in-place --remove-all-unused-imports --remove-duplicate-keys --remove-unused-variables {} +" },
    { cmd = "poetry run black ." },
    { cmd = "poetry run isort ." },
]
help = "Make code linting and formatting."
